<resources>
    <string name="app_name">LoLDraftCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="jungle_button_text">Jungle</string>
    <string name="support_button_text">Supp</string>
    <string name="top_button_text">Top</string>
    <string name="mid_button_text">Mid</string>
    <string name="adc_button_text">adc</string>
    <string name="main_activity_edit_champs_button">Edit Champs</string>

    <string name="title_activity_display_screen">DisplayScreen</string>
    
    
    <string name="title_activity_build__database">Build_Database</string>
    <string name="build_database_main_activity_button">Build Database</string>
    <string name="primary_role">Primary Role</string>
    <string name="champion_role_lable_for_spinner_in_database_builder">Champion Role</string>
    <string name="build_database_champ_primary_posit">Primary Position</string>
    <string name="build_database_champ_name">Champ Name</string>
    <string name="build_database_secondary_position">Secondary Position</string>
    <string name="build_database_primary_role">Primary Role</string>
    <string name="build_database_secondary_role">Secondary Role</string>
    <string name="build_database_next_champ_button">Next</string>
    <string name="build_database_previous_champ_button">Prev</string>
    <string name="build_database_done_button">Done</string>
    <string name="build_database_primary_dmg_type">Primary Dmg Type</string>
    <string name="build_database_wave_clear_strength">Wave Clear Strength</string>
    <string name="build_database_champ_tier">Champ Tier</string>

    <string name="champ_posit_top">Top</string>
    <string name="champ_posit_mid">Mid</string>
    <string name="champ_posit_jungle">Jungle</string>
    <string name="champ_posit_adc">Ad Carry</string>
    <string name="champ_posit_support">Support</string>

    <string name="champ_role_assassin">Assassin</string>
    <string name="champ_role_fighter">Fighter</string>
    <string name="champ_role_mage">Mage</string>
    <string name="champ_role_support">Support</string>
    <string name="champ_role_tank">Tank</string>
    <string name="champ_role_marksman">Marksman</string>

    <string name="wave_clear_nonexistent">non-existent</string>
    <string name="wave_clear_poor">poor</string>
    <string name="wave_clear_average">average</string>
    <string name="wave_clear_good">good</string>
    <string name="wave_clear_excellent">excellent</string>

    <string-array name="champion_positions">
        <item></item>
        <item>@string/champ_posit_top</item>
        <item>@string/champ_posit_mid</item>
        <item>@string/champ_posit_jungle</item>
        <item>@string/champ_posit_adc</item>
        <item>@string/champ_posit_support</item>
    </string-array>

    <string-array name="champion_roles">
        <item></item>
        <item>@string/champ_role_assassin</item>
        <item>@string/champ_role_fighter</item>
        <item>@string/champ_role_mage</item>
        <item>@string/champ_role_support</item>
        <item>@string/champ_role_tank</item>
        <item>@string/champ_role_marksman</item>
    </string-array>

    <string-array name="champion_dmg_type">
        <item></item>
        <item>AP</item>
        <item>AD</item>
        <item>Both</item>
    </string-array>

    <string-array name="champ_tier">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="wave_clear_strength">
        <item>@string/wave_clear_nonexistent</item>
        <item>@string/wave_clear_poor</item>
        <item>@string/wave_clear_average</item>
        <item>@string/wave_clear_good</item>
        <item>@string/wave_clear_excellent</item>
    </string-array>
    <string name="title_activity_edit_champs">EditChamps</string>
    <string name="title_activity_edit_spec_champ">EditSpecChamp</string>
    <string name="edit_spec_champ_discard_changes">Discard</string>
    <string name="edit_spec_champ_save_changes">Save</string>
    <string name="title_activity_draft_screen">DraftScreen</string>


</resources>
