<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timbauer.loldraftcalculator.BuildDatabaseScreen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/champName">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_champ_name"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/currentChamp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/primaryPosit"
        android:layout_below="@+id/champName">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_champ_primary_posit"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_positions"
            android:id="@+id/editPrimaryPosit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/primaryPosit"
        android:id="@+id/secondaryPosit">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_secondary_position"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_positions"
            android:id="@+id/editSecondaryPosit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/secondaryPosit"
        android:id="@+id/secondaryPosit2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_secondary_position"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_positions"
            android:id="@+id/editSecondaryPosit2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/secondaryPosit2"
        android:id="@+id/primaryRole">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_primary_role"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_roles"
            android:id="@+id/editPrimaryRole"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/primaryRole"
        android:id="@+id/secondaryRole">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_secondary_role"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_roles"
            android:id="@+id/editSecondaryRole"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/secondaryRole"
        android:id="@+id/primary_dmg_type">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_primary_dmg_type"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/champion_dmg_type"
            android:id="@+id/editPrimaryDmgType"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/primary_dmg_type"
        android:id="@+id/wave_clear">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_database_wave_clear_strength"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/wave_clear_strength"
            android:id="@+id/editWaveClearStrength"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_database_next_champ_button"
        android:id="@+id/next_champ"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="getNextChamp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_database_previous_champ_button"
        android:id="@+id/previous_champ"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:onClick="getPreviousChamp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_database_done_button"
        android:id="@+id/exit_activity"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="exitToHomeScreen"/>

</RelativeLayout>
